--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </section>
 
 <div class="modal mbr-popup cid-rWgwfVcXz5 fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-8" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-5"><strong>DOE VIA TED BANCÁRIA</strong></h5>
