--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/img-2473-128x128.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/pira-solidaria-logo-site-122x122.png" type="image/x-icon">
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>Pira Solidária</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/icons-mind/style.css">
