create github pages

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                 <div class="modal-body">
                     <p class="mbr-text mbr-fonts-style display-4">
-                        Esse é o modo mais rápido de o dinheiro chegar até nós e ser usado para compras de alimentos. Nas outras opções (Pagseguro e Vakinha) o dinheiro demora até 14 dias para poder ser retirado das plataformas e também pagamos uma pequena taxa.<br><br>Caso queira usar outro banco, mande Whatsapp para <a href="https://wa.me/+551921329471">(19) 2132-9471</a> e passamos as informações.<br><br></p>
+                        Esse é o modo mais rápido de o dinheiro chegar até nós e ser usado para compras de alimentos. Na opção de doar pelo site Vakinha o dinheiro demora até 14 dias para poder ser retirado da plataforma e também pagamos uma pequena taxa.<br><br>Caso queira usar outro banco, mande Whatsapp para <a href="https://wa.me/+551921329471">(19) 2132-9471</a> e passamos as informações.<br><br></p>
 
                     <div>
                         <div class="card-img mbr-figure">
@@ -139,8 +139,7 @@
 
                     <div class="modal-footer">
                         <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="https://nubank.com.br/pagar/14jol/wyMuXWdRTW" target="_blank">
-                                TED BANCÁRIO</a> <a class="btn btn-md btn-success-outline display-4" href="https://pag.ae/7VWXpeqYK" target="_blank">
-                                PAGSEGURO</a> <a class="btn btn-md btn-success-outline display-4" href="http://vaka.me/995617" target="_blank">
+                                ⭐ TED BANCÁRIO</a>  <a class="btn btn-md btn-success-outline display-4" href="http://vaka.me/995617" target="_blank">
                                 VAKINHA</a></div>
                     </div>
                 </div>
@@ -160,7 +159,7 @@
         <h2 class="mbr-fonts-style mbr-section-title align-center display-5">O Coronavírus é uma realidade e já é considerada uma pandemia mundial. A cidade de Piracicaba está em alerta e vem adotando todos os procedimentos para impedir o avanço da doença.
 <div>
 </div><div>No entanto, pessoas e famílias em situação de risco e vulnerabilidade social já estão sentindo os impactos negativos da pandemia, como falta de alimentos, produtos de limpeza e higiene pessoal.
-</div><br><div>O objetivo é formar uma rede de apoio para ampliar a ajuda e fazer com que ela chegue mais rápido e para mais pessoas. Muitos estabelecimentos comerciais, ONGs e iniciativas pessoais como essa estão sendo criadas na cidade e você pode escolher aquela que você mais confia. O importante é que você participle, doe ou contribua.
+</div><br><div>O objetivo é formar uma rede de apoio para ampliar a ajuda e fazer com que ela chegue mais rápido e para mais pessoas. Muitos estabelecimentos comerciais, ONGs e iniciativas pessoais como essa estão sendo criadas na cidade e você pode escolher aquela que você mais confia. O importante é que você participe, doe ou contribua.
 </div><br><div><strong>Veja o que doar ou como contribuir:</strong></div><div><br></div></h2>
         <div class="media-container-row justify-content-center align-items-start main-wrapper">
             <div class="icon-main col-lg-3 col-md-6 col-12 without-before">
